MEC Production/MEC Production/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <formula>Opportunity.Client_PO_Number__c</formula>
        <label>Customer PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <formula>Opportunity.Account.Distribution_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Opportunity.Account.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <formula>Opportunity.Account.Doc_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doc Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Formula__c</fullName>
        <formula>SUBSTITUTE(TEXT(ExpirationDate), &apos;-&apos;,&apos;&apos;)</formula>
        <label>Expiration Date (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PO_Created_Date__c</fullName>
        <formula>Opportunity.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <formula>IF( !ISBLANK(Opportunity.PO_Validity__c),Opportunity.PO_Validity__c, Opportunity.CloseDate)</formula>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Require_Delivery_Date__c</fullName>
        <label>Require Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Code__c</fullName>
        <formula>Opportunity.Account.SAP_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Quotation_Number__c</fullName>
        <externalId>true</externalId>
        <label>SAP Quotation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <formula>Opportunity.Account.Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>